# terminal_ld53

./: .gitattributes  .gitignore  .ignore  Cargo.toml  LICENSE  README.md  build.rs
assets/models/: Aircraft_1.blend  Aircraft_1.blend1  Aircraft_1.mtl  Tank_1.glb  Tank_1.gltf  Tank_1.mtl  Terrain_1.mtl
src/: main.rs  resources.rs
src/audio/: audio_manager.rs
src/collision/: collider.rs
src/game/: aircraft.rs  aircraft_input.rs  audio_test.rs  axis_renderer.rs  axis_vertex.rs  game_state.rs  inventory.rs  mesh_renderer.rs  mod.rs  model.rs  on_screen_diagnostics.rs  sample_scene.rs  transform.rs
src/game/buildings/: building.rs
src/game/camera/: flying_camera.rs  mod.rs  player_camera.rs  rts_camera.rs
src/game/collision/: collider.rs
src/game/diagnostics/: axis_renderer.rs  mod.rs
src/game/egui_manager/: egui.wgsl  egui_renderer.rs
src/game/terrain/: terrain.rs
src/input/: cursor_manager.rs  keyboard_manager.rs  mod.rs
src/renderer/: camera.rs  light.rs  mod.rs  model.rs  render_state.rs  standard_shader.wgsl  texture.rs
src/renderer/shaders/: axis.wgsl
